--- a/trailrunner/bower.json
+++ b/trailrunner/bower.json
@@ -5,6 +5,8 @@
     "bootstrap": "3.3.5",
     "jquery": "2.1.4",
     "jquery-validation": "1.14.0",
-    "jquery-validation-unobtrusive": "3.2.4"
+    "jquery-validation-unobtrusive": "3.2.4",
+    "angular": "~1.4.8",
+    "angular-ui-router": "~0.2.15"
   }
 }
